Migrer til valkey
Co-authored-by: Sindre Larsen <sindre.larsen@nav.no>

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -30,8 +30,8 @@ spec:
     outbound:
       rules:
         - application: lydia-api
-  redis:
-    - instance: fiasessions
+  valkey:
+    - instance: fia-session
       access: readwrite
   azure:
     application:
