--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -26,6 +26,16 @@ spec:
   prometheus:
     enabled: true
     path: "/internal/metrics"
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: nodejs
+      destinations:
+        - id: "grafana-lgtm"
+    logging:
+      destinations:
+        - id: loki
+        - id: elastic
   accessPolicy:
     outbound:
       rules:
