--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@amplitude/analytics-browser": "2.17.3",
+        "@floating-ui/react": "0.27.12",
         "@navikt/aksel-icons": "7.21.1",
         "@navikt/ds-css": "7.21.1",
         "@navikt/ds-react": "7.21.1",
@@ -35,7 +36,6 @@
         "zod": "3.24.4"
     },
     "devDependencies": {
-        "storybook": "^8.6.12",
         "@babel/core": "7.27.1",
         "@storybook/addon-actions": "^8.6.12",
         "@storybook/addon-essentials": "^8.6.12",
@@ -61,6 +61,7 @@
         "msw": "2.7.6",
         "msw-storybook-addon": "2.0.4",
         "prettier": "3.5.3",
+        "storybook": "^8.6.12",
         "ts-jest": "29.3.2",
         "typescript": "5.8.3",
         "ulid": "3.0.0",
