--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
         "react-router-dom": "7.5.3",
         "react-select": "5.10.1",
         "recharts": "2.15.3",
+        "sass": "1.89.1",
         "styled-components": "6.1.18",
         "swr": "2.3.3",
         "zod": "3.24.4"
