--- a/client/package.json
+++ b/client/package.json
@@ -17,64 +17,54 @@
         "tsc": "tsc"
     },
     "dependencies": {
-        "@amplitude/analytics-browser": "2.17.3",
-        "@floating-ui/react": "0.27.12",
-        "@navikt/aksel-icons": "7.21.1",
-        "@navikt/ds-css": "7.21.1",
-        "@navikt/ds-react": "7.21.1",
-        "highcharts": "12.2.0",
+        "@amplitude/analytics-browser": "2.18.2",
+        "@floating-ui/react": "0.27.13",
+        "@navikt/aksel-icons": "7.25.1",
+        "@navikt/ds-css": "7.25.1",
+        "@navikt/ds-react": "7.25.1",
+        "highcharts": "12.3.0",
         "highcharts-react-official": "3.2.2",
         "html-to-image": "1.11.13",
         "jspdf": "3.0.1",
         "react": "19.1.0",
         "react-dom": "19.1.0",
-        "react-router-dom": "7.5.3",
-        "react-select": "5.10.1",
-        "recharts": "2.15.3",
-        "sass": "1.89.1",
-        "styled-components": "6.1.18",
-        "swr": "2.3.3",
-        "zod": "3.24.4"
+        "react-router-dom": "7.6.3",
+        "react-select": "5.10.2",
+        "recharts": "3.1.0",
+        "sass": "1.89.2",
+        "styled-components": "6.1.19",
+        "swr": "2.3.4",
+        "zod": "3.25.76"
     },
     "devDependencies": {
-        "@babel/core": "7.27.1",
-        "@storybook/addon-actions": "^8.6.12",
-        "@storybook/addon-essentials": "^8.6.12",
-        "@storybook/addon-interactions": "^8.6.12",
-        "@storybook/addon-links": "^8.6.12",
-        "@storybook/react": "^8.6.12",
-        "@storybook/react-vite": "^8.6.12",
+        "@babel/core": "7.28.0",
+        "@storybook/addon-actions": "^9.0.8",
+        "@storybook/addon-links": "^9.0.16",
+        "@storybook/react": "^9.0.16",
+        "@storybook/react-vite": "^9.0.16",
         "@storybook/testing-library": "0.2.2",
-        "@types/jest": "29.5.14",
-        "@types/react": "19.1.3",
-        "@types/react-dom": "19.1.3",
-        "@typescript-eslint/eslint-plugin": "^8.32.0",
-        "@typescript-eslint/parser": "^8.32.0",
-        "@vitejs/plugin-react": "4.4.1",
+        "@types/jest": "30.0.0",
+        "@types/react": "19.1.8",
+        "@types/react-dom": "19.1.6",
+        "@typescript-eslint/eslint-plugin": "^8.36.0",
+        "@typescript-eslint/parser": "^8.36.0",
+        "@vitejs/plugin-react": "4.6.0",
         "babel-loader": "10.0.0",
-        "eslint": "9.26.0",
+        "eslint": "9.31.0",
         "eslint-plugin-jsx-a11y": "6.10.2",
         "eslint-plugin-react": "7.37.5",
-        "eslint-plugin-storybook": "0.12.0",
+        "eslint-plugin-storybook": "^9.0.16",
         "husky": "9.1.7",
-        "jest": "29.7.0",
-        "jest-environment-jsdom": "29.7.0",
-        "msw": "2.7.6",
-        "msw-storybook-addon": "2.0.4",
-        "prettier": "3.5.3",
-        "storybook": "^8.6.12",
-        "ts-jest": "29.3.2",
+        "jest": "30.0.4",
+        "jest-environment-jsdom": "30.0.4",
+        "msw": "2.10.4",
+        "msw-storybook-addon": "2.0.5",
+        "prettier": "3.6.2",
+        "storybook": "^9.0.16",
+        "ts-jest": "29.4.0",
         "typescript": "5.8.3",
-        "ulid": "3.0.0",
-        "vite": "6.3.5"
-    },
-    "optionalDependencies": {
-        "@esbuild/linux-x64": "*",
-        "@rollup/rollup-linux-x64-gnu": "*"
-    },
-    "overrides": {
-        "glob-parent": "6.0.2",
-        "semver": "7.5.2"
+        "ulid": "3.0.1",
+        "vite": "7.0.4"
     },
     "msw": {
         "workerDirectory": "public"
