--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "0.0.0",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev": "nodemon server.ts",
     "start": "node build/server.js",
@@ -19,26 +20,29 @@
     "follow-redirects": "1.15.9",
     "helmet": "8.1.0",
     "http-proxy-middleware": "3.0.5",
-    "iovalkey": "^0.3.1",
-    "jose": "5.10.0",
+    "iovalkey": "^0.3.3",
+    "jose": "6.0.10",
     "prometheus-api-metrics": "4.0.0",
     "winston": "3.17.0"
   },
   "devDependencies": {
+    "@babel/core": "7.28.0",
+    "@babel/preset-env": "7.28.0",
+    "@babel/preset-typescript": "7.27.1",
     "@types/express": "4.17.21",
     "@types/express-session": "1.18.1",
-    "@types/jest": "29.5.14",
-    "@types/node": "22.15.16",
+    "@types/jest": "30.0.0",
+    "@types/node": "22.16.4",
     "@types/supertest": "6.0.3",
     "@typescript-eslint/eslint-plugin": "8.32.0",
     "@typescript-eslint/parser": "8.32.0",
-    "eslint": "9.26.0",
-    "jest": "29.7.0",
+    "babel-jest": "30.0.4",
+    "eslint": "9.31.0",
+    "jest": "30.0.4",
     "nock": "14.0.4",
     "nodemon": "3.1.10",
     "prom-client": "15.1.3",
-    "supertest": "7.1.0",
-    "ts-jest": "29.3.2",
+    "supertest": "7.1.3",
     "ts-node": "10.9.2",
     "typescript": "5.8.3"
   },
