--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,10 @@
         "@storybook/react": "^9.1.10",
         "@storybook/react-vite": "^9.1.10",
         "@storybook/testing-library": "0.2.2",
+        "@testing-library/dom": "10.4.1",
+        "@testing-library/react": "16.3.0",
         "@types/jest": "30.0.0",
+        "@types/jest-axe": "3.5.9",
         "@types/react": "19.2.2",
         "@types/react-dom": "19.2.1",
         "@typescript-eslint/eslint-plugin": "^8.46.0",
@@ -55,6 +58,7 @@
         "eslint-plugin-storybook": "^9.1.10",
         "husky": "9.1.7",
         "jest": "30.2.0",
+        "jest-axe": "10.0.0",
         "jest-environment-jsdom": "30.2.0",
         "msw": "2.11.4",
         "msw-storybook-addon": "2.0.5",
