--- a/client/package.json
+++ b/client/package.json
@@ -57,14 +57,17 @@
         "eslint-plugin-react": "7.37.5",
         "eslint-plugin-storybook": "^9.1.10",
         "husky": "9.1.7",
+        "identity-obj-proxy": "3.0.0",
         "jest": "30.2.0",
         "jest-axe": "10.0.0",
         "jest-environment-jsdom": "30.2.0",
+        "jest-transform-stub": "2.0.0",
         "msw": "2.11.4",
         "msw-storybook-addon": "2.0.5",
         "prettier": "3.6.2",
         "storybook": "^9.1.10",
         "ts-jest": "29.4.4",
+        "ts-node": "10.9.2",
         "typescript": "5.9.3",
         "ulid": "3.0.1",
         "vite": "7.1.12"
