--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
         "recharts": "3.2.1",
         "sass": "1.93.2",
         "swr": "2.3.6",
+        "vite-plugin-csp-guard": "3.0.0",
         "zod": "4.1.12"
     },
     "devDependencies": {
