--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,11 @@
         "tsc": "tsc"
     },
     "dependencies": {
-        "@amplitude/analytics-browser": "2.25.4",
         "@floating-ui/react": "0.27.16",
         "@navikt/aksel-icons": "7.32.1",
         "@navikt/ds-css": "7.32.1",
         "@navikt/ds-react": "7.32.1",
+        "@unhead/react": "2.0.19",
         "highcharts": "12.4.0",
         "highcharts-react-official": "3.2.3",
         "html-to-image": "1.11.13",
