--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "connect-redis": "8.1.0",
+    "connect-redis": "9.0.0",
     "cookie-parser": "1.4.7",
     "csrf-csrf": "4.0.3",
     "dotenv": "17.2.3",
@@ -21,22 +21,23 @@
     "http-proxy-middleware": "3.0.5",
     "iovalkey": "^0.3.3",
     "jose": "6.1.0",
+    "npm": "11.6.2",
     "prometheus-api-metrics": "4.0.0",
     "winston": "3.18.3"
   },
   "devDependencies": {
-    "@babel/core": "7.28.4",
-    "@babel/preset-env": "7.28.3",
-    "@babel/preset-typescript": "7.27.1",
-    "@types/express": "5.0.3",
+    "@babel/core": "7.28.5",
+    "@babel/preset-env": "7.28.5",
+    "@babel/preset-typescript": "7.28.5",
+    "@types/express": "5.0.5",
     "@types/express-session": "1.18.2",
     "@types/jest": "30.0.0",
     "@types/node": "22.18.8",
     "@types/supertest": "6.0.3",
-    "@typescript-eslint/eslint-plugin": "8.46.0",
-    "@typescript-eslint/parser": "8.46.0",
+    "@typescript-eslint/eslint-plugin": "8.46.3",
+    "@typescript-eslint/parser": "8.46.3",
     "babel-jest": "30.2.0",
-    "eslint": "9.37.0",
+    "eslint": "9.39.1",
     "jest": "30.2.0",
     "nock": "14.0.10",
     "nodemon": "3.1.10",
