La til generering av coverage-rapport for tester.

--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "vite",
         "test": "jest",
+        "test:coverage": "jest --coverage",
         "prebuild": "npm run lint && tsc",
         "build": "vite build",
         "preview": "vite preview",
