--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -72,7 +72,7 @@ jobs:
       id-token: write
     name: Deploy app to dev
     needs: build
-    if: github.ref == 'refs/heads/pdfeksport'
+    if: github.ref == 'refs/heads/publiser-test'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
