Bytt eksport av kartleggingresultater med pdf generert av backend
  - endret fil ikon til pdf

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -145,6 +145,7 @@ services:
       SALESFORCE_USERNAME: username
       SALESFORCE_PASSWORD: password
       SALESFORCE_SECURITY_TOKEN: securityToken
+      PIA_PDFGEN_URL: http://pia-pdfgen
     restart: unless-stopped
 
   valkey:
