--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -72,7 +72,7 @@ jobs:
       id-token: write
     name: Deploy app to dev
     needs: build
-    if: github.ref == 'refs/heads/journalfoer'
+    if: github.ref == 'refs/heads/chainguard_node22'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
